[project]
name = "improve-english-pronunciation"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "makinzm", email = "makinzm@makinzm.invalid" }
]
dependencies = [
    "streamlit>=1.29.0",
    "python-Levenshtein>=0.23.0",
    "eng-to-ipa>=0.0.2",
]
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
