[project]
name = "improve-english-pronunciation"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "makinzm", email = "makinzm@makinzm.invalid" }
]
dependencies = [
    "streamlit>=1.29.0",
    "python-Levenshtein>=0.23.0",
    "eng-to-ipa>=0.0.2",
    "ruff>=0.1.9",
]
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 70

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set. By default, Ruff omits rules that
# overlap with the use of a formatter, like Black, but we can override this behavior by
# explicitly adding the rule.
select = [
    "ALL"
]
ignore = [
    "N802",     # Function Name
    "N803",     # Argument Name
    "N806",     # Variable Name
    "N816",     # mixed Case Name
    "N999",     # File name
    "D205",     # Blank Line
    "D415",     # End punctuation
    "E501",     # line length
    "TRY003",   # Try Specifying Message
    "ANN204",   # __init__ return type
]

[tool.ruff.lint.pydocstyle]
convention = "google"
